--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </div>
         <div class="hero-visual" aria-hidden="true">
           <img
-            src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=1100&q=80"
-            alt="Students collaborating with laptops"
+            src="https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?auto=format&fit=crop&w=1100&q=80"
+            alt="Students collaborating on laptops in a classroom"
             loading="lazy"
           />
         </div>
